--- a/package.json
+++ b/package.json
@@ -1,5 +1,29 @@
 {
-  "devDependencies": {
-    "sass": "^1.26.10"
-  }
+    "devDependencies": {
+        "cssnano": "^4.1.10",
+        "sass": "^1.26.10"
+    },
+    "prettier": {
+        "trailingComma": "none",
+        "tabWidth": 4,
+        "semi": true,
+        "singleQuote": true,
+        "jsxSingleQuote": true,
+        "jsxBracketSameLine": true,
+        "bracketSpacing": true,
+        "arrowParens": "always",
+        "printWidth": 90,
+        "endOfLine": "lf",
+        "overrides": [
+            {
+                "files": [
+                    "*.scss",
+                    "*.css"
+                ],
+                "options": {
+                    "tabWidth": 2
+                }
+            }
+        ]
+    }
 }
