--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "main": "dist/choosely.min.js",
     "dependencies": {},
     "scripts": {
-        "build": "webpack --mode production",
-        "prepublish": "npm run build"
+        "build": "npm run build:prod & npm run build:dev",
+        "build:prod": "webpack --mode production",
+        "build:dev": "webpack --mode development",
+        "prepublish": "npm build"
     },
     "repository": {
         "type": "git",
@@ -24,29 +26,7 @@
         "babel-loader": "^8.1.0",
         "sass": "^1.26.10",
         "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12"
-    },
-    "prettier": {
-        "trailingComma": "none",
-        "tabWidth": 4,
-        "semi": true,
-        "singleQuote": true,
-        "jsxSingleQuote": true,
-        "jsxBracketSameLine": true,
-        "bracketSpacing": true,
-        "arrowParens": "always",
-        "printWidth": 140,
-        "endOfLine": "lf",
-        "overrides": [
-            {
-                "files": [
-                    "*.scss",
-                    "*.css"
-                ],
-                "options": {
-                    "tabWidth": 2
-                }
-            }
-        ]
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
     }
 }
