--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
     "main": "dist/choosely.min.js",
     "dependencies": {},
     "scripts": {
-        "dev": "",
-        "build": "npm run build:prod & npm run build:dev",
-        "build:prod": "webpack --mode production",
-        "build:dev": "webpack --mode development",
+        "dev": "pacel dev/index.html",
+        "build": "webpack --mode production",
         "prepublish": "npm build"
     },
     "repository": {
